--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -55,35 +55,35 @@
 </header>
 <!---main--->
 <main>
-       <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
-       <section class="container">
-        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-        <div class="row  w-100  mx-auto animate__animated animate__fadeInLeft">
-          <div class=" mx-auto col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center"><img src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas" width="350px" height="200px">
+       <h1 class="text-center titulo_ellas mx-auto">Pensado para <span style="color: purple ">ellas</span></h1>
+       <section class="container mx-auto">
+       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
+        <div class="row  w-100  mx-auto animate__animated animate__fadeInLeft ">
+          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas" width="350px" height="200px">
           </div>
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto "><img src="../imagenes/campera_nena2.webp" class="img_niñex rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+          <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img src="../imagenes/campera_nena2.webp" class="img_niñex rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
           </div>
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/campera_nena4.webp" class="img_niñex rounded float-end" alt="campera para niñas" width="350px" height="200px">
+          <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/campera_nena4.webp" class="img_niñex rounded float-end" alt="campera para niñas" width="350px" height="200px">
           </div>
         </section>
-          <section class="container">
+          <section class="container mx-auto">
             <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-          <div class="row w-100  mx-auto animate__animated animate__backInRight">
-            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas" width="350px" height="200px">
+          <div class="row w-100  mx-auto animate__animated animate__backInRight ">
+            <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas" width="350px" height="200px">
             </div>
-            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
+            <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
             </div>
-            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg5.webp" class=" img_niñex rounded float-end" alt="remeras para niñas" width="350px" height="200px">
+            <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg5.webp" class=" img_niñex rounded float-end" alt="remeras para niñas" width="350px" height="200px">
             </div>
         </section>
-        <section class="container">
+        <section class="container mx-auto">
           <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-          <div class="row w-100  mx-auto animate__animated animate__backInUp">
-            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start" alt="pantalon para niñas" width="350px" height="200px">
+          <div class="row w-100  mx-auto animate__animated animate__backInUpcol ">
+            <div class= "col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start  " alt="pantalon para niñas" width="350px" height="200px">
         </div>
-            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niñas" width="350px" height="200px">
+            <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block " alt="pantalon para niñas" width="350px" height="200px">
             </div>
-            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena4.webp" class="img_niñex rounded float-end" alt="pantalon para niñas" width="350px" height="200px">
+            <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena4.webp" class="img_niñex rounded float-end " alt="pantalon para niñas" width="350px" height="200px">
             </div>
         </div>
     </section>
@@ -92,7 +92,7 @@
     <footer>
       <div class="d-flex justify-content-center">
       <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.facebook.com/campaign/landing.php?&campaign_id=1662524771&extra_1=s%7Cc%7C320628650062%7Ce%7Cfacebook%7C&placement=&creative=320628650062&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1662524771%26adgroupid%3D67039035794%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9041046%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=EAIaIQobChMInd2J64eT-gIVUhPUAR1hjgXoEAAYASAAEgKjDvD_BwE"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
       <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
    </footer>
