--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </header>
   <!---main--->
   <main>
-    <h1 class="titulo_bienvenida animate__animated animate__zoomIn d-flex justify-content-center">Bienvenidos a
+    <h1 class="titulo_bienvenida animate__animated animate__zoomIn d-flex justify-content-center text-center">Bienvenidos a
       indumetaria Los2Primos</h1>
     <section>
       <div class="container">
