--- a/pages/niños.html
+++ b/pages/niños.html
@@ -21,7 +21,7 @@
  /> 
 </head>
 <!---body--->
-<body class="bniñxs">
+<body class="bniñxs overflow-auto">
   <header>
   <nav class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
