--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,7 +22,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <!---body--->
-<body class="bnosotros bg.primary">
+<body class="bnosotros bg.primary overflow-auto">
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
         <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
           <a class="navbar-brand" href="../index.html">Los2Primos</a>
