--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1 class="titulo_bienvenida animate__animated animate__zoomIn d-flex justify-content-center text-center">Bienvenidos a
       indumetaria Los2Primos</h1>
     <section>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row ">
           <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center">
             <div class="card h-100 card--fondo" style="width: 300px;">
@@ -97,7 +97,7 @@
       </div>
     </section>
     <section>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row ">
           <div
             class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
@@ -138,10 +138,19 @@
   </main>
   <!---pie--->
   <footer>
-    <div class="d-flex justify-content-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
-      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-      <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+    <div class="container-fluid">
+      <div class="row ">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+      </div>
+     
     </div>
   </footer>
   <!---script bootstrap--->
