--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,7 +55,7 @@
       <!---main--->
       <main>
         <article class="container">
-            <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center animate__animated animate__zoomIn"> Todavia no te registraste?</h1>
+            <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center animate__animated animate__zoomIn text-center"> Todavia no te registraste?</h1>
             <p class=" parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100"> Aprovecha todo tipo de descuentos en la sucursal o 
               via online, al registrarte tenes un 15% off en cualquier tipo de prenda abonando en efectivo, debito o transferencia bancaria, ademas 
               sorteamos todos los meses una gift card a nuestros fieles clientes, completa el formulario y llenate de oportunidades!!!
@@ -133,11 +133,20 @@
       </main>
       <!---pie--->
       <footer>
-        <div class="d-flex justify-content-center">
-        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-      </div>    
+        <div class="container-fluid">
+          <div class="row ">
+            <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+              <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+              <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+          </div>
+         
+        </div>   
       </footer>
     <!---link bootstrap--->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
