--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -84,11 +84,20 @@
         </section>
         <!---pie--->
         <footer>
-          <div class="d-flex justify-content-center">
-          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
+          <div class="container-fluid">
+            <div class="row ">
+              <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+                <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+              </div>
+              <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+                <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+              </div>
+              <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+              <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+              </div>
+            </div>
+           
+          </div>
        </footer>
         <!---script bootstrap--->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
