--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <!---body--->
-<body class="bmenu bg.primary overflow-auto">
+<body class="bmenu bg.primary ">
     <nav class=" navbar navbar-expand-lg bg-light  justify-content-center aligin-items-center animate__animated animate__fadeInDownBig">
         <div class="container-fluid d-flex  flex-column justify-content-center aligin-items-center ">
           <a class="navbar-brand " href="../index.html">Los2Primos</a>
