--- a/pages/niños.html
+++ b/pages/niños.html
@@ -53,7 +53,7 @@
   </nav>
 </header>
 <h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
-  <section class="container d-flex flex-column justify-content-center aligin-items-center">
+  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
     <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp.webp" class="img_niñex rounded float-start" alt="campera para niños" width="350px" height="200px">
@@ -63,7 +63,7 @@
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp3.webp" class=" img_niñex rounded float-end" alt="campera para niños" width="350px" height="200px">
       </div>
     </section>
-      <section class="container d-flex flex-column justify-content-center aligin-items-center">
+      <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
         <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
       <div class="row w-100  mx-auto animate__animated animate__backInRight">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px" height="200px">
@@ -73,7 +73,7 @@
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px" height="200px">
         </div>
     </section>
-    <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__backInUp">
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center animate__animated animate__backInUp">
       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
       <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños" width="350px" height="200px">
