--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -56,7 +56,7 @@
 <!---main--->
 <main>
        <h1 class="text-center titulo_ellas mx-auto">Pensado para <span style="color: purple ">ellas</span></h1>
-       <section class="container mx-auto">
+       <section class="container-fluid mx-auto">
        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
         <div class="row  w-100  mx-auto animate__animated animate__fadeInLeft ">
           <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas" width="350px" height="200px">
@@ -66,7 +66,7 @@
           <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/campera_nena4.webp" class="img_niñex rounded float-end" alt="campera para niñas" width="350px" height="200px">
           </div>
         </section>
-          <section class="container mx-auto">
+          <section class="container-fluid mx-auto">
             <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
           <div class="row w-100  mx-auto animate__animated animate__backInRight ">
             <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas" width="350px" height="200px">
@@ -76,7 +76,7 @@
             <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg5.webp" class=" img_niñex rounded float-end" alt="remeras para niñas" width="350px" height="200px">
             </div>
         </section>
-        <section class="container mx-auto">
+        <section class="container-fluid mx-auto">
           <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
           <div class="row w-100  mx-auto animate__animated animate__backInUpcol ">
             <div class= "col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start  " alt="pantalon para niñas" width="350px" height="200px">
