--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,7 +52,7 @@
         </div>
       </nav>
       <main>
-        <article class="conteiner mx-auto">
+        <article class="container-fluid mx-auto">
              <div class="col-md-12 d-flex flex-column mx-auto">
                 <h1 class="fs-2  fw-bold justify-content-center mx-auto">Nuestra Historia</h1>
                 <p class="fs-5 fst-italic mx-auto texto_historia">Somos una pymes familiar que trabaja y se dedica constantemente a la indumentaria 
@@ -60,7 +60,7 @@
                </div>
 
         </article>
-        <section class="conteiner">
+        <section class="container-fluid">
             <div class="row">
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Los fundadores de indumentaria Los2Primos</h2>
