--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,7 +23,7 @@
 </head>
 <!---body--->
 <body class="bnosotros bg.primary overflow-auto ">
-    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
+    <nav class=" navbar navbar-expand-lg bg-light animate__fadeInDownBig ">
         <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
           <a class="navbar-brand" href="../index.html">Los2Primos</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,10 +70,10 @@
                 la mejor calidad y comidad para nuestros niños.</p>
               </div>
               <div class="col-md-6 mt-2">
-                <img class="w-100 mx-auto rounded-4 mb-4 animate__animated animate__fadeInTopRight" src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
+                <img class="w-100 mx-auto rounded-4 mb-4 " src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
               </div> 
               <div class="col-md-6">
-                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.webp" alt="vendedores" width="300px" height="200px" >
+                    <img class="w-100 mx-auto rounded-4 " src="../imagenes/vendedores.webp" alt="vendedores" width="300px" height="200px" >
                   </div> 
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Nuestrxs vendedorxs</h2>
