--- a/pages/niños.html
+++ b/pages/niños.html
@@ -73,7 +73,7 @@
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px" height="200px">
         </div>
     </section>
-    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center animate__animated animate__backInUp">
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
       <div class="row w-100  mx-auto ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños" width="350px" height="200px">
