--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,7 +23,7 @@
 </head>
 <!---body--->
 <body class="bnosotros bg.primary overflow-auto ">
-    <nav class=" navbar navbar-expand-lg bg-light animate__fadeInDownBig ">
+    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
         <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
           <a class="navbar-brand" href="../index.html">Los2Primos</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
       <main>
         <article class="container-fluid mx-auto">
              <div class="col-md-12 d-flex flex-column mx-auto">
-                <h1 class="fs-2  fw-bold justify-content-center mx-auto">Nuestra Historia</h1>
+                <h1 class="fs-2  fw-bold justify-content-center mx-auto animate__animated animate__zoomIn ">Nuestra Historia</h1>
                 <p class="fs-5 fst-italic mx-auto texto_historia">Somos una pymes familiar que trabaja y se dedica constantemente a la indumentaria 
                   de niños, nuestro fin es tener la mejor calidad a un precio accesible a cualquier tipo de familia. </p>
                </div>
