--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,10 +70,10 @@
                 la mejor calidad y comidad para nuestros niños.</p>
               </div>
               <div class="col-md-6 mt-2">
-                <img class="w-100 mx-auto rounded-4 mb-4 " src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
+                <img class="w-100 mx-auto rounded-4 mb-4 animate__animated animate__bounceInRight " src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
               </div> 
               <div class="col-md-6">
-                    <img class="w-100 mx-auto rounded-4 " src="../imagenes/vendedores.webp" alt="vendedores" width="300px" height="200px" >
+                    <img class="w-100 mx-auto rounded-4 animate__animated animate__bounceInLeft " src="../imagenes/vendedores.webp" alt="vendedores" width="300px" height="200px" >
                   </div> 
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Nuestrxs vendedorxs</h2>
