--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -58,7 +58,7 @@
   <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
   <section class="container-fluid ">
   <p class="text-center mt-2 fs-3">Camperas</p>
-   <div class="row  ">
+   <div class="row animate__animated animate__bounceInRight">
      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas" width="350px" height="200px">
      </div>
      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img src="../imagenes/campera_nena2.webp" class="img_niñex rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
@@ -68,7 +68,7 @@
    </section>
      <section class="container-fluid">
        <p class="text-center mt-2 fs-3">Remeras</p>
-     <div class="row  ">
+     <div class="row  animate__animated animate__bounceInLeft>
        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas" width="350px" height="200px">
        </div>
        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
@@ -78,7 +78,7 @@
    </section>
    <section class="container-fluid ">
      <p class="text-center mt-2 fs-3">Pantalones</p>
-     <div class="row  ">
+     <div class="row animate__animated animate__bounceInRight ">
        <div class= "col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start  " alt="pantalon para niñas" width="350px" height="200px">
    </div>
        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block " alt="pantalon para niñas" width="350px" height="200px">
