--- a/pages/niños.html
+++ b/pages/niños.html
@@ -55,7 +55,7 @@
 <h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
   <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-    <div class="row w-100  mx-auto ">
+    <div class="row w-100  mx-auto animate__animated animate__bounceInRight">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp.webp" class="img_niñex rounded float-start" alt="campera para niños" width="350px" height="200px">
       </div>
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp4.webp" class=" img_niñex rounded mx-auto d-block" alt="campera para niños" width="350px" height="200px">
@@ -65,7 +65,7 @@
     </section>
       <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
         <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-      <div class="row w-100  mx-auto ">
+      <div class="row w-100  mx-auto animate__animated animate__bounceInLeft ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px" height="200px">
         </div>
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy2.webp" class= "img_niñex rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
@@ -75,7 +75,7 @@
     </section>
     <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-      <div class="row w-100  mx-auto ">
+      <div class="row w-100  mx-auto animate__animated animate__bounceInRight">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños" width="350px" height="200px">
     </div>
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niños" width="350px" height="200px">
