--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -25,7 +25,7 @@
 <body class="bniñas overflow-auto">
   <header>
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
+      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
         <a class="navbar-brand" href="../index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,70 +60,57 @@
     <section class="container-fluid ">
       <p class="text-center mt-2 fs-3">Camperas</p>
       <div class="row ">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas"
-            width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
+            src="../imagenes/campera_nena1.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
         </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-            src="../imagenes/campera_nena2.webp" class="img_niñex rounded mx-auto d-block" alt="campera para niñas"
-            width="350px" height="200px">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center  "><img
+            src="../imagenes/campera_nena2.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
         </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="../imagenes/campera_nena4.webp" class="img_niñex rounded float-end" alt="campera para niñas"
-            width="350px" height="200px">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
+            src="../imagenes/campera_nena4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
         </div>
     </section>
     <section class="container-fluid">
       <p class="text-center mt-2 fs-3">Remeras</p>
       <div class="row">
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas"
-            width="350px" height="200px">
+            src="../imagenes/remeragirld.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas"
-            width="350px" height="200px">
+            src="../imagenes/remeragirld.jpg2.jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/remeragirld.jpg5.webp" class=" img_niñex rounded float-end" alt="remeras para niñas"
-            width="350px" height="200px">
+            src="../imagenes/remeragirld.jpg5.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
         </div>
     </section>
     <section class="container-fluid ">
       <p class="text-center mt-2 fs-3">Pantalones</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start  " alt="pantalon para niñas"
-            width="350px" height="200px">
+            src="../imagenes/pantalon_nena4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
+            >
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block " alt="pantalon para niñas"
-            width="350px" height="200px">
+            src="../imagenes/pantalon_nena2.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
+           >
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon_nena4.webp" class="img_niñex rounded float-end " alt="pantalon para niñas"
-            width="350px" height="200px">
+            src="../imagenes/pantalon.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas"
+            >
         </div>
       </div>
     </section>
   </main>
   <!---pie--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row ">
-        <div
-          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-      </div>
+  <footer class="">
+    <div class="d-flex align-items-center justify-content-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+
+      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+
+
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+
 
     </div>
   </footer>
