--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 <!---body--->
 
-<body class="bindex sm ">
+<body class="bindex">
   <header>
-    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
+    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+      <div class="container-fluid d-flex flex-column justify-content-center align-items-center w-100">
         <a class="navbar-brand" href="./index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,113 +54,70 @@
   </header>
   <!---main--->
   <main>
-    <h1 class="titulo_bienvenida animate__animated animate__zoomIn d-flex justify-content-center text-center">
+    <h1 class="titulo_bienvenida animate__animated animate__zoomIn text-center">
       Bienvenidos a
       indumetaria Los2Primos</h1>
     <section>
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <div class="row ">
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center">
-            <div class="card h-100 card--fondo" style="width: 300px;">
-              <img src="./imagenes/pantalon3.webp" class="card-img-top" alt="jeans para niños align-items-center">
-              <div class="card-body">
-                <h5 class="card-title">Pantalones para niños</h5>
-                <p class="card-text">Los jeans mas cancheros y comodos, solamente en Los2Primos.</p>
-                <a href="./pages/niños.html" class="btn btn-primary mt-0.2">ir</a>
-              </div>
-            </div>
+          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+            src="./imagenes/campera_nena1.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center  "><img
+            src="./imagenes/boy (1).jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
+            src="./imagenes/pantalon_nena2.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
+        </div>
+    </section>
+    <section class="container-fluid">
+      <div class="row">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="./imagenes/pantalon.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src= "./imagenes/camp.jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src= "./imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
+        </div>
+    </section>
+    <section class="container-fluid ">
+      <div class="row ">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src= "./imagenes/boy3.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
+            >
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src= "./imagenes/pantalon_nena4.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
+           >
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="./imagenes/camp4.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas"
+            >
+        </div>
+      </div>
+    </section>
 
-          </div>
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <div class="card h-100 card--fondo2" style="width: 300px; ">
-              <img src="./imagenes/remeragirld.jpg2.webp" class="card-img-top" alt="remera para niñas">
-              <div class="card-body">
-                <h5 class="card-title">Remeras para nenas</h5>
-                <p class="card-text">Encuentra todo la moda en remeras para niñas.</p>
-                <a href="./pages/niñas.html" class="btn btn-primary">ir</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <div class="card h-100 card--fondo" style="width: 300px;">
-              <img src="./imagenes/camp4.webp" class="card-img-top" alt="camperas para niños">
-              <div class="card-body">
-                <h5 class="card-title">Camperas para niños</h5>
-                <p class="card-text">Los mejores abrigos para niños esta en Los2Primos, visita nuestro catalogo con un
-                  click.</p>
-                <a href="./pages/niños.html" class="btn btn-primary">ir</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="container-fluid">
-        <div class="row ">
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <div class="card h-100 card--fondo2" style="width: 300px; ">
-              <img src="./imagenes/campera_nena3.webp" class="card-img-top" alt="camperas para niñas">
-              <div class="card-body">
-                <h5 class="card-title">Camperas para niñas</h5>
-                <p class="card-text">Lo ultimo en moda para niñas.</p>
-                <a href="./pages/niñas.html" class="btn btn-primary">ir</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <div class="card h-100 card--fondo" style="width: 300px; ">
-              <img src="./imagenes/boy4.jpg" class="card-img-top" alt="remeras para niños">
-              <div class="card-body">
-                <h5 class="card-title">Remeras para niños</h5>
-                <p class="card-text">Las remeras mas cancheras estan aqui.</p>
-                <a href="./pages/niños.html" class="btn btn-primary">ir</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <div class="card h-100 card--fondo2" style="width: 300px;">
-              <img src="./imagenes/pantalon_nena1.webp" class="card-img-top" alt="jeans para niñas">
-              <div class="card-body">
-                <h5 class="card-title">Pantalon para nenas</h5>
-                <p class="card-text">Su elasticidad permite que puedan jugar y divertirse comodomante.</p>
-                <a href="./pages/niñas.html" class="btn btn-primary justify-content-center">ir</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
   </main>
   <!---pie--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row ">
-        <div
-          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-      </div>
+  <footer class="">
+    <div class="d-flex align-items-center justify-content-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+
+      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+
+
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+
 
     </div>
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossor
+    igin="anonymous"></script>
 </body>
 
 </html>
