--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,23 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!---titulo--->
   <title>Los2Primos - Contacto</title>
-  <meta name="description" content="Registrate y obtene los mejores descuentos">
-  <meta name="keywords" content="informacion,ropa,niños,niñas,moda,calidad,indumentaria,contacto">
-  <!---css--->
+  <meta name="description" content="ropa para chicos">
+  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,contacto">
   <link rel="stylesheet" href="../scss/estilos.css">
-  <!---iconos--->
   <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
-  <!---aos--->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Los2Primos</title>
   <!---bootstrap--->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!---cabecera--->
 </head>
-<!---body--->
 
-<body class="bmenu bg.primary ">
+<body class="bmenu d-flex flex-column mh-100">
   <nav
     class=" navbar navbar-expand-lg bg-light  justify-content-center aligin-items-center animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex  flex-column justify-content-center aligin-items-center ">
@@ -56,23 +53,22 @@
   </nav>
   <!---main--->
   <main>
-    <article class="container">
-      <h1
-        class=" titulo fs-1 d-flex justify-content-center aligin-items-center animate__animated animate__zoomIn text-center">
-        Todavia no te registraste?</h1>
-      <p class=" parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100"> Aprovecha todo tipo de
-        descuentos en la sucursal o
-        via online, al registrarte tenes un 15% off en cualquier tipo de prenda abonando en efectivo, debito o
-        transferencia bancaria, ademas
-        sorteamos todos los meses una gift card a nuestros fieles clientes, completa el formulario y llenate de
-        oportunidades!!!
+    <article class="container d-flex flex-column">
+
+      <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center"> todavia no te registraste?</h1>
+      <p class=" parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100">Lorem, ipsum dolor sit amet
+        consectetur adipiicing elit. Vitae ab pariatur dolorum assumenda nulla repellendus
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora repellat quod corrupti delectus! Nulla
+        possimus perspi
+        ciatis unde, totam excepturi quia numquam mollitia quam? Tempora vitae architecto nam delectus vel porro? aut
+        quasi esse itaque facere error cumque, corrupti, praesentium ex consequatur deserunt obcaecati iste!
       </p>
     </article>
     <section class=" acordion container">
-      <div class="row">
-        <div class="col-md-6 justify-content-center aligin-items-center">
+      <div class="row ">
+        <div class="col-md-6 justify-content-center aligin-items-center ">
           <div class="accordion accordion-flush" id="accordionFlushExample">
-            <h3 class="info animate__animated animate__pulse">Informacion</h3>
+            <h3 class="info">Informacion</h3>
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -114,7 +110,7 @@
         </div>
 
         <div class=" formulario col-md-6">
-          <h2 class="tituloform animate__animated animate__pulse d-flex justify-content-center">Registrate</h2>
+          <h2 class="tituloform">Registrate</h2>
           <form>
             <div class="form">
               <div class="mb-3 formc">
@@ -145,25 +141,17 @@
 
   </main>
   <!---pie--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row ">
-        <div
-          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-      </div>
+  <footer class="">
+    <div class="d-flex align-items-center justify-content-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+
+      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+
+
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+
 
     </div>
-  </footer>
   <!---link bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
