--- a/pages/niños.html
+++ b/pages/niños.html
@@ -54,82 +54,62 @@
       </div>
     </nav>
   </header>
-  <h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
+  <main>
+  <h1 class="text-center titulo_niños"><span style="color: red "> Pensado para ellos</span></h1>
   <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-    <div class="row w-100  mx-auto ">
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/camp.webp" class="img_niñex rounded float-start" alt="campera para niños" width="350px"
-          height="200px">
+    <div class="row ">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+          src="../imagenes/camp.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
       </div>
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/camp4.webp" class=" img_niñex rounded mx-auto d-block" alt="campera para niños"
-          width="350px" height="200px">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
+          src="../imagenes/camp3.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
       </div>
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/camp3.webp" class=" img_niñex rounded float-end" alt="campera para niños" width="350px"
-          height="200px">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+          src="../imagenes/camp4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
       </div>
   </section>
-  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
-    <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-    <div class="row w-100  mx-auto  ">
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px"
-          height="200px">
+  <section class="container-fluid">
+    <p class="text-center mt-2 fs-3">Remeras</p>
+    <div class="row">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="../imagenes/boy3.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
       </div>
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/boy2.webp" class="img_niñex rounded mx-auto d-block" alt="remera para niños" width="350px"
-          height="200px">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="../imagenes/boy (1).jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
       </div>
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px"
-          height="200px">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="../imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
       </div>
   </section>
-  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
-    <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-    <div class="row w-100  mx-auto ">
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños"
-          width="350px" height="200px">
+  <section class="container-fluid ">
+    <p class="text-center mt-2 fs-3">Pantalones</p>
+    <div class="row ">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="../imagenes/pantalon4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
+          >
       </div>
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/pantalon2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niños"
-          width="350px" height="200px">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="../imagenes/pantalon3.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
+         >
       </div>
-      <div
-        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
-        <img src="../imagenes/pantalon4.webp" class=" img_niñex rounded float-end" alt="pantalon para niños"
-          width="350px" height="200px">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="../imagenes/pantalon2.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas"
+          >
       </div>
     </div>
   </section>
+</main>
   <!---pie--->
-  <footer>
-    <div class="container-fluid">
-      <div class="row ">
-        <div
-          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-        </div>
-        <div
-          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-      </div>
+  <footer class="">
+    <div class="d-flex align-items-center justify-content-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+
+      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+
+
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+
 
     </div>
   </footer>
