--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,9 +22,10 @@
 </head>
 <!---body--->
 
-<body class="bnosotros bg.primary overflow-auto ">
+<body class="bnosotros">
+  <header>
   <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
+    <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
       <a class="navbar-brand" href="../index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,64 +53,33 @@
       </div>
     </div>
   </nav>
+  </header>
   <main>
-    <article class="container-fluid mx-auto">
-      <div class="col-md-12 d-flex flex-column mx-auto">
-        <h1 class="fs-2  fw-bold justify-content-center mx-auto animate__animated animate__zoomIn ">Nuestra Historia
-        </h1>
-        <p class="fs-5 fst-italic mx-auto texto_historia">Somos una pymes familiar que trabaja y se dedica
-          constantemente a la indumentaria
-          de niños, nuestro fin es tener la mejor calidad a un precio accesible a cualquier tipo de familia. </p>
+    <section class="container nuestra_historia padding-bottom-100 padding-top-100 mw-100 mh-100">
+      <div class="row mt-5">
+        <div class="col-xs-12 col-sm-6 d-flex justify-content-center align-items-center flex-column">
+          <h1 class="text-center texto_historia fs-1">Nuestra historia</h1>
+          <p class="fs-4">indumentaria Los2Primos es una empresa familiar fundada en el años 2022 por Alan y Sofia chichizola.
+            La propuesta se basa en prendas de excelente calidad, diseños coloridos, diferentes texturas y con 
+            estampas divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños.
+             Contando además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
+          </p>
+        </div>
+      <div class="col-xs-12 col-sm-6 d-flex justify-content-center align-items-center">
+       <img class="mw-100 rounded" src="../imagenes/fund.jpg" alt="quienes somos" >
       </div>
+     </div>
+   </section>
+  
 
-    </article>
-    <section class="container-fluid">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <h2 class="mx-auto fs-4">Los fundadores de indumentaria Los2Primos</h2>
-          <p class="fst-italic fs-6 mt-3 texto_historia">Los fundadores de indumentaria Los2Primos son
-            Alan y Sofia chichizola, somos dos hermanos apasionados por la indumentaria infatil, nuestra inspiracion son
-            nuestros
-            dos hijos, nuestra mision es que ellos/as se sientan libre a la hora de jugar,correr, entre otras cosas, por
-            eso mismo ofrecemos
-            la mejor calidad y comidad para nuestros niños.</p>
-        </div>
-        <div class="col-md-6 mt-2">
-          <img class="w-100 mx-auto rounded-4 mb-4" src="../imagenes/fundadores.webp" alt="fundadores" width="300px"
-            height="200px">
-        </div>
-        <div class="col-md-6">
-          <img class="w-100 mx-auto rounded-4 " src="../imagenes/vendedores.webp" alt="vendedores" width="300px"
-            height="200px">
-        </div>
-        <div class="col-md-6 mx-auto">
-          <h2 class="mx-auto fs-4">Nuestrxs vendedorxs</h2>
-          <p class="fst-italic fs-6 mt-3 texto_historia">Para nosotros es de su importancia que el cliente tenga un
-            experencia de atencion y cuidado
-            para que nos vuelvan a elegir dia a dia, nuestros vendedorxs se capacitan constantemente en la atencion al
-            cliente para asi poder
-            dar un atencion de excelencia.</p>
-        </div>
-    </section>
+  </main>
     <!---pie--->
-    <footer>
-      <div class="container-fluid">
-        <div class="row ">
-          <div
-            class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-          </div>
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-          </div>
-          <div
-            class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-          </div>
-        </div>
-
-      </div>
+    <footer class="d-flex align-items-strech justify-content-center">
+      <div class="">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+     </div>
     </footer>
     <!---script bootstrap--->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
