--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
   <!---cabecera--->
 </head>
 
-<body class="bmenu d-flex flex-column mh-100">
+<body class="bmenu body">
   <nav
     class=" navbar navbar-expand-lg bg-light  justify-content-center aligin-items-center animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex  flex-column justify-content-center aligin-items-center ">
