--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,27 +5,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!---titulo--->
-  <title>Los2Primos - Nosotros</title>
-  <meta name="description" content="Conoce nuestra historia">
-  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos,creadores">
   <!---css--->
   <link rel="stylesheet" href="../scss/estilos.css">
-  <!---iconos--->
+
+  <!---titulo--->
+  <title>Los2Primos - Nosotros</title>
+  <meta name="description" content="ropa para chicos">
+  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos">
   <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
-  <!---aos--->
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <title>Los2Primos</title>
   <!---bootstrap--->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!---cabecera--->
 </head>
-<!---body--->
 
-<body class="bnosotros">
-  <header>
-  <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-    <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+<body class="bnosotros body">
+  <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
+    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
       <a class="navbar-brand" href="../index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,33 +55,43 @@
       </div>
     </div>
   </nav>
-  </header>
   <main>
-    <section class="container nuestra_historia padding-bottom-100 padding-top-100 mw-100 mh-100">
-      <div class="row mt-5">
-        <div class="col-xs-12 col-sm-6 d-flex justify-content-center align-items-center flex-column">
-          <h1 class="text-center texto_historia fs-1">Nuestra historia</h1>
-          <p class="fs-4">indumentaria Los2Primos es una empresa familiar fundada en el años 2022 por Alan y Sofia chichizola.
-            La propuesta se basa en prendas de excelente calidad, diseños coloridos, diferentes texturas y con 
-            estampas divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños.
-             Contando además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
-          </p>
-        </div>
-      <div class="col-xs-12 col-sm-6 d-flex justify-content-center align-items-center">
-       <img class="mw-100 rounded" src="../imagenes/fund.jpg" alt="quienes somos" >
-      </div>
-     </div>
-   </section>
-  
+    <article class="conteiner mx-auto">
+      <div class="col-md-12 d-flex flex-column mx-auto">
+        <h1 class="fs-2  fw-bold justify-content-center mx-auto">Nuestra Historia</h1>
+        <p class="fs-5 fst-italic mx-auto texto_historia">es una empresa familia, que cuenta con 3 años de
+          trayectoria en el mercado de indumentaria para bebes y niños, de 0 a 14 años y que cada temporada propone
+          looks diferentes.
 
-  </main>
+          Nació con un pequeño proyecto entre hermanos, y en la actualidad, cuenta con un local propios en Jose Leon Suarez, y
+          37 clientes con formatos mayoristas exclusivos o multimarca distribuidos en todo el país.
+
+          La propuesta se basa en prendas de excelente calidad, diseños coloridos, diferentes texturas y con estampas
+          divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños. Contando
+          además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
+        </p>
+      </div>
+
+    </article>
+    <section class="conteiner">
+      <div class="row">
+        </div>
+        <div class="col-md-12 mt-2 d-flex justify-content-center align-items-center">
+          <img src="../imagenes/fund.jpg" class="img-fluid" alt="fundadores">
+        </div>
+    </section>
     <!---pie--->
-    <footer class="d-flex align-items-strech justify-content-center">
-      <div class="">
+    <footer class="">
+      <div class="d-flex align-items-center justify-content-center">
         <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+  
         <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+  
+  
         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-     </div>
+  
+  
+      </div>
     </footer>
     <!---script bootstrap--->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
