--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,10 +21,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 <!---body--->
 
-<body class="bindex mv-100 overflow-auto">
+<body class="bindex card--fondo">
   <header>
-    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-      <div class="container-fluid d-flex flex-column justify-content-center align-items-center w-100">
+    <nav class=" navbar navbar-expand-lg bg-light ">
+      <div class="container-fluid d-flex flex-column justify-content-center  animate__animated animate__fadeInDownBig">
         <a class="navbar-brand" href="./index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,70 +55,45 @@
   </header>
   <!---main--->
   <main>
-    <h1 class="titulo_bienvenida animate__animated animate__zoomIn text-center">
-      Bienvenidos a
-      indumetaria Los2Primos</h1>
-    <section>
-      <div class="container-fluid ">
-        <div class="row ">
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="./imagenes/campera_nena1.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
-        </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center  "><img
-            src="./imagenes/boy (1).jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
-        </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
-            src="./imagenes/pantalon_nena2.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
-        </div>
-    </section>
-    <section class="container-fluid">
-      <div class="row">
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="./imagenes/pantalon.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
-        </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src= "./imagenes/camp.jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
-        </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src= "./imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
-        </div>
-    </section>
-    <section class="container-fluid ">
-      <div class="row ">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src= "./imagenes/boy3.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
-            >
-        </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src= "./imagenes/pantalon_nena4.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
-           >
-        </div>
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="./imagenes/camp4.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas"
-            >
-        </div>
+    <h1 class=" titulo_bienvenida text-center">
+      Bienvenidos a indumetaria Los2Primos</h1>
+     </main>
+     <section class="container">
+      <div class="row mt-5">
+        <img class="col-md-4 mw-100 rounded-4" src="./imagenes/boy (1).jpg" alt="">
+        <img class="col-md-4 mw-100 rounded-4" src="./imagenes/campera_nena1.jpg" alt="">
+        <img class="col-md-4 mw-100 rounded-4" src="./imagenes/pantalon.jpg" alt="">
       </div>
-    </section>
-
-
-  </main>
+     </section>
+     <section class="container">
+      <div class="row mt-4">
+        <img class="col-md-4 mw-100 rounded-4" src="./imagenes/pantalon2.jpg" alt="">
+        <img class="col-md-4 mw-100 rounded-4" src="./imagenes/remeragirld.jpg" alt="">
+        <img class="col-md-4 mw-100 rounded-4" src="./imagenes/camp.jpg" alt="">
+      </div>
+     </section>
+     <section class="container">
+      <div class="row mt-4">
+        <img class=" img col-md-4 mw-100 rounded-4" src="./imagenes/campera_nena2.jpg" alt="">
+        <img class=" img col-md-4 mw-100 rounded-4" src="./imagenes/boy4.jpg" alt="">
+        <img class=" img col-md-4 mw-100 rounded-4" src="./imagenes/pantalon3.jpg" alt="">
+      </div>
+     </section>
   <!---pie--->
-  <footer class="">
-    <div class="d-flex align-items-center justify-content-center">
+  <footer>
+    <div class="text-center d-flex justify-content-center align-items-center ">
       <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
 
       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
 
 
       <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+</div>
 
-
-    </div>
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossor
-    igin="anonymous"></script>
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
