--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -22,7 +22,7 @@
 </head>
 <!---body--->
 
-<body class="bniñas overflow-auto">
+<body class="bniñas body">
   <header>
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
       <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
