--- a/pages/niños.html
+++ b/pages/niños.html
@@ -21,7 +21,7 @@
 </head>
 <!---body--->
 
-<body class="bniños overflow-auto">
+<body class="bniños body">
   <header>
     <nav
       class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
