--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -56,13 +56,12 @@
     </div>
   </nav>
   <main>
-    <article class="conteiner mx-auto">
-      <div class="col-md-12 d-flex flex-column mx-auto">
-        <h1 class="fs-2  fw-bold justify-content-center mx-auto">Nuestra Historia</h1>
-        <p class="fs-5 fst-italic mx-auto texto_historia">es una empresa familia, que cuenta con 3 años de
+    <article class="container d-flex flex-column">
+      
+        <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center">Nuestra Historia</h1>
+        <p class="parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100">es una empresa familia, que cuenta con 3 años de
           trayectoria en el mercado de indumentaria para bebes y niños, de 0 a 14 años y que cada temporada propone
           looks diferentes.
-
           Nació con un pequeño proyecto entre hermanos, y en la actualidad, cuenta con un local propios en Jose Leon Suarez, y
           37 clientes con formatos mayoristas exclusivos o multimarca distribuidos en todo el país.
 
@@ -70,8 +69,7 @@
           divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños. Contando
           además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
         </p>
-      </div>
-
+      
     </article>
     <section class="conteiner">
       <div class="row">
