--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
 </head>
 <!---animacion--->
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 <!---body--->
 
-<body class="bindex mw-100 overflow-scroll">
+<body class="bindex d-flex flex-column">
   <header>
-    <nav class=" navbar navbar-expand-lg bg-light ">
-      <div class="container-fluid d-flex flex-column justify-content-center ">
+    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig d-flex flex-column justify-content-center aligin-items-center w-100">
         <a class="navbar-brand" href="./index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,16 +100,12 @@
     </div>
   </section>
   <!---pie--->
-  <footer>
-    <div class=" pie text-center d-flex justify-content-center align-items-center ">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-
-      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-
-
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-    </div>
-
+  <footer >
+    <div class=" d-flex flex-column justify-content-center align-items-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
+     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
+   </div>
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
