--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
   <!---cabecera--->
 </head>
 
-<body class="bmenu body">
+<body class="bmenu d-flex flex-column">
   <nav
     class=" navbar navbar-expand-lg bg-light  justify-content-center aligin-items-center animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex  flex-column justify-content-center aligin-items-center ">
@@ -141,17 +141,15 @@
 
   </main>
   <!---pie--->
-  <footer class="">
-    <div class="d-flex align-items-center justify-content-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-
-      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-
-
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-
-
-    </div>
+  
+    <footer >
+      <div class=" d-flex flex-column justify-content-center align-items-center">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
+       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
+        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
+     </div>
+    </footer>
+ 
   <!---link bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
