--- a/pages/niños.html
+++ b/pages/niños.html
@@ -21,7 +21,7 @@
 </head>
 <!---body--->
 
-<body class="bniños body">
+<body class="bniños d-flex flex-column">
   <header>
     <nav
       class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
@@ -101,17 +101,12 @@
   </section>
 </main>
   <!---pie--->
-  <footer class="">
-    <div class="d-flex align-items-center justify-content-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-
-      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-
-
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-
-
-    </div>
+  <footer >
+    <div class=" d-flex flex-column justify-content-center align-items-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
+     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
+   </div>
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
