--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -22,10 +22,10 @@
 </head>
 <!---body--->
 
-<body class="bniñas body">
+<body class="bniñas d-flex flex-column">
   <header>
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
+      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
         <a class="navbar-brand" href="../index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
   <!---main--->
   <main>
     <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
-    <section class="container-fluid ">
+    <section class="container-fluid w-100">
       <p class="text-center mt-2 fs-3">Camperas</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
@@ -102,17 +102,12 @@
     </section>
   </main>
   <!---pie--->
-  <footer class="">
-    <div class="d-flex align-items-center justify-content-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-
-      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-
-
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-
-
-    </div>
+  <footer >
+    <div class=" d-flex flex-column justify-content-center align-items-center">
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
+     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
+   </div>
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
