--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,28 +24,28 @@
 <!---body--->
 
 <body class="bnosotros">
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">Navbar</a>
+  <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+    <div class="container-fluid d-flex  flex-column justify-content-center">
+      <a class="navbar-brand" href="../index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+            <a class="nav-link active " aria-current="page" href="../index.html">inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/niñas.html">niñas</a>
+            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/niños.html">niños</a>
+            <a class="nav-link active" href="../pages/niños.html">Niños</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/nosotros.html">nosotros</a>
+            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/contacto.htmls">contacto</a>
+            <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
           </li>
           
       </div>
@@ -54,8 +54,8 @@
   <main>
     <section class="container-fluid">
       <div class=" nosotros d-flex justify-content-center align-items-center flex-column w-100 ">
-            <h1 class="text-center">Nuestra Historia</h1>
-          <p>es una empresa familia, que cuenta con 3 años de
+            <h1 class="text-center texto_historia">Nuestra Historia</h1>
+          <p>indumentaria Los2Primos es una empresa familia, que cuenta con 3 años de
             trayectoria en el mercado de indumentaria para bebes y niños, de 0 a 14 años y que cada temporada propone
             looks diferentes.
             Nació con un pequeño proyecto entre hermanos, y en la actualidad, cuenta con un local propios en Jose Leon Suarez, y
@@ -74,10 +74,14 @@
   </main>
     <!---pie--->
     <footer  >
-      <div class=" d-flex justify-content-center align-items-center ">
-        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
-       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
-        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
+      <div class=" d-flex justify-content-center align-items-center flex-column">
+        <div class="redes">
+          <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
+         <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+         <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+       </div>
+        <h6>Todos los derechos reservados ©</h6>
+        <h6>By Los2Primos</h6>
      </div>
     </footer>
   
