--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!---css--->
   <link rel="stylesheet" href="./scss/estilos.css">
-  
+  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
 </head>
 <!---animacion--->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
@@ -21,16 +21,16 @@
 <!---body--->
 
 <body class="bindex ">
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Navbar</a>
+  <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+    <div class="container-fluid d-flex  flex-column justify-content-center">
+      <a class="navbar-brand" href="./index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/niñas.html">niñas</a>
@@ -48,48 +48,49 @@
       </div>
     </div>
   </nav>
-  <main >
-    <h1 class=" titulo_bienvenida text-center logo-media mt-2">
+  <main  >
+    <h1 class=" titulo_bienvenida text-center">
       Bienvenidos a indumetaria Los2Primos</h1>
+      <p class="text-center mt-4">Lo travieso no lo cambiara, pero su estilo en moda si sera ejemplar.</p>
   <section class=" container-fluid d-flex flex-column justify-content-center aligin-items-center">
        <div class="row  ">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center ">
-        <img src="./imagenes/campera_nena1.jpg"  class="alto-icono rounded float-start mw-100 rounded" alt="campera para niñas">
+        <img src="./imagenes/campera_nena1.jpg"  class="img rounded float-start  rounded" alt="campera para niñas">
       </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-          src="./imagenes/boy (1).jpg" class="alto-icono rounded mx-auto d-block mw-100 rounded" alt="remera para niños">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="./imagenes/boy (1).jpg" class="img rounded mx-auto d-block  rounded" alt="remera para niños">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-          src="./imagenes/pantalon_nena2.jpg" class="alto-icono rounded float-end mw-100 rounded" alt="pantalon para niñas">
+          src="./imagenes/pantalon_nena2.jpg" class="img rounded float-end  rounded" alt="pantalon para niñas">
       </div>
   </section>
   <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
     
     <div class="row ">
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/pantalon2.jpg" class=" alto-icono rounded float-start mw-100 rounded" alt="pantalon para niñas">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="./imagenes/pantalon2.jpg" class=" img rounded float-start  rounded" alt="pantalon para niñas">
       </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/campera_nena2.jpg" class=" alto-icono rounded mx-auto d-block mw-100 rounded "
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+          src="./imagenes/campera_nena2.jpg" class=" img rounded mx-auto d-block  rounded "
           alt="campera para niñas">
       </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/boy3.jpg" class=" alto-icono rounded float-end mw-100 rounded " alt="remeras para niños">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+          src="./imagenes/boy3.jpg" class=" img rounded float-end  rounded " alt="remeras para niños">
       </div>
   </section>
   <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
  
     <div class="row pb-3 ">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/remeragirld.jpg" class="alto-icono rounded float-start rounded mw-100 rounded   "
+          src="./imagenes/remeragirld.jpg" class="img rounded float-start rounded  rounded   "
           alt="remera para niñas">
       </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/pantalon3.jpg" class=" alto-icono rounded mx-auto d-block rounded mw-100 rounded "
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+          src="./imagenes/pantalon3.jpg" class=" img rounded mx-auto d-block rounded  rounded "
           alt="pantalon para niños">
       </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/campera_nena3.jpg" class="alto-icono rounded float-end  mw-100 rounded" alt="campera para niñas">
+      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+          src="./imagenes/campera_nena3.jpg" class="img rounded float-end   rounded" alt="campera para niñas">
       </div>
     </div>
   </section>
@@ -97,10 +98,10 @@
 <footer class=" pt-3">
   <div class="text-center d-flex justify-content-center align-items-center flex-column">
     <div class="redes">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
-      <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
-       <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
-     </div>
+      <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
+     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+     <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+   </div>
     <div>
       <h6>Todos los derechos reservados ©</h6>
       <h6>By Los2Primos</h6>
