--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -12,7 +12,7 @@
   <!---css--->
   <link rel="stylesheet" href="../scss/estilos.css">
   <!---script iconos--->
- 
+  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
   <!---aos--->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -24,74 +24,77 @@
 
 <body class="bniñas">
  
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+    <div class="container-fluid d-flex  flex-column justify-content-center">
+      <a class="navbar-brand" href="../index.html">Los2Primos</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/niñas.html">niñas</a>
+            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/niños.html">niños</a>
+            <a class="nav-link active" href="../pages/niños.html">Niños<a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/nosotros.html">nosotros</a>
+            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/contacto.html">contacto</a>
+            <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
           </li>
-          
+
+        </ul>
       </div>
     </div>
   </nav>
+
   <main>
     <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
     <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Camperas</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
-            src="../imagenes/campera_nena1.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+            src="../imagenes/campera_nena1.jpg" class="img rounded float-start mw-100 rounded" alt="campera para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center  "><img
-            src="../imagenes/campera_nena2.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
+            src="../imagenes/campera_nena2.jpg" class="img rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
-            src="../imagenes/campera_nena4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
+            src="../imagenes/campera_nena4.jpg" class="img rounded float-end mw-100 rounded" alt="campera para niñas">
         </div>
     </section>
     <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Remeras</p>
       <div class="row">
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/remeragirld.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
+            src="../imagenes/remeragirld.jpg" class=" img rounded float-start mw-100 rounded" alt="remeras para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/remeragirld.jpg2.jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
+            src="../imagenes/remeragirld.jpg2.jpg" class=" img rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/remeragirld.jpg5.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
+            src="../imagenes/remeragirld.jpg5.jpg" class=" img rounded float-end mw-100 rounded " alt="remeras para niñas">
         </div>
     </section>
     <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Pantalones</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon_nena4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
+            src="../imagenes/pantalon_nena4.jpg" class="img rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
             >
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon_nena2.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
+            src="../imagenes/pantalon_nena2.jpg" class=" img rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
            >
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas"
+            src="../imagenes/pantalon.jpg" class="img rounded float-end  mw-100 rounded" alt="pantalon para niñas"
             >
         </div>
       </div>
@@ -101,10 +104,10 @@
   <footer >
     <div class="text-center d-flex justify-content-center align-items-center flex-column">
       <div class="redes">
-        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
-         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
-       </div>
+        <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
+       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+       <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+     </div>
       <div>
         <h6>Todos los derechos reservados ©</h6>
         <h6>By Los2Primos</h6>
