--- a/pages/niños.html
+++ b/pages/niños.html
@@ -23,11 +23,9 @@
 
 <body class="bniños">
  <header>  
-  <h1 class="mb-4 titulo_bienvenida text-center">
-    Bienvenidos a indumetaria Los2Primos</h1>
-</header>
+
     <nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-      <div class="container-fluid ">
+      <div class="container-fluid d-flex  flex-column justify-content-center">
         <a class="navbar-brand" href="../index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,43 +60,43 @@
       <p class="text-center mt-2 fs-3">Camperas</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="../imagenes/camp.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+            src="../imagenes/camp.jpg" class="img rounded float-start mw-100 rounded" alt="campera para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-            src="../imagenes/camp3.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded"
+            src="../imagenes/camp3.jpg" class="img rounded mx-auto d-block mw-100 rounded"
             alt="campera para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-            src="../imagenes/camp4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
+            src="../imagenes/camp4.jpg" class="img rounded float-end mw-100 rounded" alt="campera para niñas">
         </div>
     </section>
     <section>
       <p class="text-center mt-2 fs-3">Remeras</p>
       <div class="row">
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/boy3.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
+            src="../imagenes/boy3.jpg" class=" img rounded float-start mw-100 rounded" alt="remeras para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/boy (1).jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded "
+            src="../imagenes/boy (1).jpg" class=" img rounded mx-auto d-block mw-100 rounded "
             alt="remeras para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
+            src="../imagenes/boy4.jpg" class=" img rounded float-end mw-100 rounded " alt="remeras para niñas">
         </div>
     </section>
     <section>
       <p class="text-center mt-2 fs-3">Pantalones</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   "
+            src="../imagenes/pantalon4.jpg" class="img rounded float-start rounded mw-100 rounded   "
             alt="pantalon para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon3.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded "
+            src="../imagenes/pantalon3.jpg" class=" img rounded mx-auto d-block rounded mw-100 rounded "
             alt="pantalon para niñas">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon2.jpg" class="img_niñex rounded float-end  mw-100 rounded"
+            src="../imagenes/pantalon2.jpg" class="img rounded float-end  mw-100 rounded"
             alt="pantalon para niñas">
         </div>
       </div>
@@ -108,10 +106,10 @@
   <footer class="mt-3">
     <div class="d-flex justify-content-center aligin-items-center text-center flex-column">
       <div class="redes">
-        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
-         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
-       </div>
+        <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
+       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+       <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+     </div>
       <div>
         <h6>Todos los derechos reservados ©</h6>
         <h6>By Los2Primos</h6>
