--- a/pages/niños.html
+++ b/pages/niños.html
@@ -21,7 +21,7 @@
 </head>
 <!---body--->
 
-<body class="bniños">
+<body class="bniños d-flex flex-column">
  <header>  
 
     <nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
