--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,38 +22,38 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <!---body--->
-
 <body class="bmenu">
-  <nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
-    <div class="container-fluid d-flex  flex-column justify-content-center">
-      <a class="navbar-brand" href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/niños.html">Niños<a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
-          </li>
+  
 
-        </ul>
-      </div>
+<nav class="  navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+  <div class="container-fluid d-flex  flex-column justify-content-center">
+    <a class="navbar-brand" href="../index.html">Los2Primos</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="../pages/niños.html">Niños<a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
+        </li>
+
+      </ul>
     </div>
-  </nav>
-
+  </div>
+</nav>
   <main>
     <article class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
 
@@ -159,10 +159,12 @@
 
 
   </main>
+
+  
   <!---pie--->
 
-  <footer>
-    <div class="text-center">
+  <footer class=" pt-3">
+    <div class="text-center d-flex justify-content-center align-items-center flex-column">
       <div class="redes">
         <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
@@ -171,8 +173,8 @@
       <div>
         <h6>Todos los derechos reservados ©</h6>
         <h6>By Los2Primos</h6>
-      </div>
     </div>
+  </div> 
   </footer>
   <!---link bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
