--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -73,7 +73,15 @@
     <br>
     <img src="../imagenes/a.webp" class="w-100 mx-auto h-100" alt="fundadores" width="w-100" height="200px">
     </section>
-   
+   <article>
+    <h2 class="mt-3">Nuestra mision</h2>
+    <p class="mt-2">nuestra mision es poder darle la libertad de jugar comodamente sin descuidar la calidad del producto, 
+      la ropa en si te da felicidad y a los niños les encanta llevar la remera de su heroe favorito o las niñas
+      de sus princesa favoritas, tambien el deporte , la musica , entre otras cosas. por eso en indumentaria
+      los2primos nos esforzamos cada dia mas en poder trasnmitir esa energia, diversion y felicidad.
+      "dale a tu hijo dias que comiencen con ropa que los haga soñar, crecer y ser felices"
+    </p>
+   </article>
   
   </main>
     <!---pie--->
