--- a/pages/niños.html
+++ b/pages/niños.html
@@ -23,11 +23,12 @@
 <!---body--->
 
 <body class="bniños">
- 
+
   <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex  flex-column justify-content-center w-100">
       <a class="navbar-brand" href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -47,7 +48,7 @@
           <li class="nav-item">
             <a class="nav-link" href="../pages/contacto.html">contacto</a>
           </li>
-          
+
       </div>
     </div>
   </nav>
@@ -84,34 +85,33 @@
       <p class="text-center mt-2 fs-3">Pantalones</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon2.jpg" class="img rounded float-start rounded mw-100 rounded   " alt="pantalon para niñogots"
-            >
+            src="../imagenes/pantalon2.jpg" class="img rounded float-start rounded mw-100 rounded   "
+            alt="pantalon para niñogots">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon3.jpg" class=" img rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niños"
-           >
+            src="../imagenes/pantalon3.jpg" class=" img rounded mx-auto d-block rounded mw-100 rounded "
+            alt="pantalon para niños">
         </div>
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-            src="../imagenes/pantalon4.jpg" class="img rounded float-end  mw-100 rounded" alt="pantalon para niños"
-            >
+            src="../imagenes/pantalon4.jpg" class="img rounded float-end  mw-100 rounded" alt="pantalon para niños">
         </div>
       </div>
     </section>
   </main>
   <!---pie--->
-  <footer >
+  <footer>
     <div class="text-center d-flex justify-content-center align-items-center flex-column">
       <div class="redes">
         <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
-       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-       <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
-     </div>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+      </div>
       <div>
         <h6>Todos los derechos reservados ©</h6>
         <h6>By Los2Primos</h6>
+      </div>
     </div>
-  </div> 
-  
+
   </footer>
 
 
