--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!---titulo--->
- <title>Los2Primos - Nosotros</title>
- <meta name="description" content="Conoce nuestra historia">
- <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos,creadores">
- <!---css--->
- <link rel="stylesheet" href="../scss/estilos.css">
- <!---iconos--->
- <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
- <!---aos--->
-<link
- rel="stylesheet"
- href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
-/>
-<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <!---bootstrap--->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!---titulo--->
+  <title>Los2Primos - Nosotros</title>
+  <meta name="description" content="Conoce nuestra historia">
+  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos,creadores">
+  <!---css--->
+  <link rel="stylesheet" href="../scss/estilos.css">
+  <!---iconos--->
+  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+  <!---aos--->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!---bootstrap--->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <!---body--->
 
@@ -27,7 +26,8 @@
   <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
     <div class="container-fluid d-flex  flex-column justify-content-center">
       <a class="navbar-brand" href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -47,58 +47,62 @@
           <li class="nav-item">
             <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
           </li>
-          
+
       </div>
     </div>
   </nav>
   <main>
     <section class="container-fluid">
       <div class=" nosotros d-flex justify-content-center align-items-center flex-column w-100 ">
-            <h1 class="text-center texto_historia">Nuestra Historia</h1>
-          <p>indumentaria Los2Primos es una empresa familia, que cuenta con 3 años de
-            trayectoria en el mercado de indumentaria para bebes y niños, de 0 a 14 años y que cada temporada propone
-            looks diferentes.
-            Nació con un pequeño proyecto entre hermanos, y en la actualidad, cuenta con un local propios en Jose Leon Suarez, y
-            37 clientes con formatos mayoristas exclusivos o multimarca distribuidos en todo el país.
-  
-            La propuesta se basa en prendas de excelente calidad, diseños coloridos, diferentes texturas y con estampas
-            divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños. Contando
-            además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
-          </p>
-        </div >
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <img src="../imagenes/a.webp" class="w-100 mx-auto h-100" alt="fundadores" width="w-100" height="200px">
+        <h1 class="text-center texto_historia">Nuestra Historia</h1>
+        <p>indumentaria Los2Primos es una empresa familia, que cuenta con 3 años de
+          trayectoria en el mercado de indumentaria para bebes y niños, de 0 a 14 años y que cada temporada propone
+          looks diferentes.
+          Nació con un pequeño proyecto entre hermanos, y en la actualidad, cuenta con un local propios en Jose Leon
+          Suarez, y
+          37 clientes con formatos mayoristas exclusivos o multimarca distribuidos en todo el país.
+
+          La propuesta se basa en prendas de excelente calidad, diseños coloridos, diferentes texturas y con estampas
+          divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños. Contando
+          además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
+        </p>
+      </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img src="../imagenes/a.webp" class="w-100 mx-auto h-100" alt="fundadores" width="w-100" height="200px">
     </section>
-   <article>
-    <h2 class="mt-3">Nuestra mision</h2>
-    <p class="mt-2">nuestra mision es poder darle la libertad de jugar comodamente sin descuidar la calidad del producto, 
-      la ropa en si te da felicidad y a los niños les encanta llevar la remera de su heroe favorito o las niñas
-      de sus princesa favoritas, tambien el deporte , la musica , entre otras cosas. por eso en indumentaria
-      los2primos nos esforzamos cada dia mas en poder trasnmitir esa energia, diversion y felicidad.
-      "dale a tu hijo dias que comiencen con ropa que los haga soñar, crecer y ser felices"
-    </p>
-   </article>
-  
+    <article>
+      <h2 class="mt-3">Nuestra mision</h2>
+      <p class="mt-2">nuestra mision es poder darle la libertad de jugar comodamente sin descuidar la calidad del
+        producto,
+        la ropa en si te da felicidad y a los niños les encanta llevar la remera de su heroe favorito o las niñas
+        de sus princesa favoritas, tambien el deporte , la musica , entre otras cosas. por eso en indumentaria
+        los2primos nos esforzamos cada dia mas en poder trasnmitir esa energia, diversion y felicidad.
+        "dale a tu hijo dias que comiencen con ropa que los haga soñar, crecer y ser felices"
+      </p>
+    </article>
+
   </main>
-    <!---pie--->
-    <footer  >
-      <div class=" d-flex justify-content-center align-items-center flex-column">
-        <div class="redes">
-          <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
-         <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-         <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
-       </div>
-        <h6>Todos los derechos reservados ©</h6>
-        <h6>By Los2Primos</h6>
-     </div>
-    </footer>
-  
-        <!---script bootstrap--->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <!---pie--->
+  <footer>
+    <div class=" d-flex justify-content-center align-items-center flex-column">
+      <div class="redes">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class=" fa-brands fa-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://web.whatsapp.com/"><i class=" fa-brands fa-whatsapp"></i></a>
+      </div>
+      <h6>Todos los derechos reservados ©</h6>
+      <h6>By Los2Primos</h6>
+    </div>
+  </footer>
+
+  <!---script bootstrap--->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 
 </body>
 
